--- a/src/main/resources/templates/Create/createCompany.html
+++ b/src/main/resources/templates/Create/createCompany.html
@@ -10,11 +10,11 @@
 
     <div class="card-panel container">
         <div class="row">
-            <div class="col m6 logoSide center-align ">
+            <div class="col s12 m6 logoSide center-align ">
                 <a href="/" class="loginLogo"><h1>gigFinder</h1></a>
                 <h5 class="white-text"> Company Signup</h5>
             </div>
-            <div class="col m6 white compForm">
+            <div class="col s12 m6 white compForm">
                 <form th:action="@{/signup/company/}" method="post">
                     <div th:object="${user}">
                         <div class="row">
