--- a/src/main/resources/templates/fragments/includes.html
+++ b/src/main/resources/templates/fragments/includes.html
@@ -24,6 +24,7 @@
           $('.modal').modal();
           $('.tooltipped').tooltip({delay: 50});
           $('ul.tabs').tabs();
+          $('.collapsible').collapsible();
           $('.popup-youtube, .popup-vimeo, .popup-gmaps').magnificPopup({
               disableOn: 700,
               type: 'iframe',
