--- a/src/main/resources/templates/Create/createMusician.html
+++ b/src/main/resources/templates/Create/createMusician.html
@@ -84,7 +84,7 @@
                 </form>
             </div>
             <div class="col m6 logoSide center-align ">
-                <a href="/" class="loginLogo"><h1>gigFinder</h1></a>
+                <h1 class="loginLogo"> <a href="/" >gigFinder</a></h1>
                 <h5 class="white-text"> Musician Signup</h5>
             </div>
         </div>
