--- a/src/main/resources/templates/fragments/modals.html
+++ b/src/main/resources/templates/fragments/modals.html
@@ -8,10 +8,16 @@
     <div id="signupModal" class="modal">
         <div class="modal-content">
             <div class="">
-                <h3 class="center-align">LOGIN</h3>
+                <div class="section">
+                    <h5 class="center-align">Login</h5>
+
+                </div>
+
                 <div style="color: red;" th:text="${error}"></div>
 
                 <form th:action="@{/login}" th:object="${user}" method="post">
+                    <input type="hidden" th:name="${_csrf.parameterName}"
+                           th:value="${_csrf.token}" />
                     <div class="input-field">
                         <i class="material-icons prefix">account_circle</i>
                         <input id="username" type="text" th:field="*{username}" autofocus="autofocus"/>
