--- a/src/main/resources/templates/Create/createCompany.html
+++ b/src/main/resources/templates/Create/createCompany.html
@@ -11,7 +11,7 @@
     <div class="card-panel container">
         <div class="row">
             <div class="col s12 m6 logoSide center-align ">
-                <a href="/" class="loginLogo"><h1>gigFinder</h1></a>
+                <h1 class="loginLogo"> <a href="/" >gigFinder</a></h1>
                 <h5 class="white-text"> Company Signup</h5>
             </div>
             <div class="col s12 m6 white compForm">
