--- a/src/main/resources/templates/Create/createGig.html
+++ b/src/main/resources/templates/Create/createGig.html
@@ -10,7 +10,7 @@
     <div class="card-panel container">
         <div class="row">
             <div class="col s12 m6 logoSide center-align ">
-                <a href="/company/my-profile" class="loginLogo"><h1>gigFinder</h1></a>
+                <h1 class="loginLogo"> <a href="/" >gigFinder</a></h1>
                 <h5 class="white-text"> Create Gig</h5>
             </div>
             <div class="col s12 m6 white compForm">
