--- a/src/main/resources/templates/Search/findGigs.html
+++ b/src/main/resources/templates/Search/findGigs.html
@@ -16,8 +16,7 @@
                           <h4>[[${#dates.format(gig.gigStart,'d')}]]</h4>
                           <p>[[${#dates.format(gig.gigStart,'MMMM')}]]</p>
                       </div>
-                      <a sec:authorize="hasRole('ROLE_COMPANY')" class="goBtn right waves-effect waves-light white-text orange accent-4 btn-floating " th:href="'/company/gig/' + @{${gig.id}}"><i class="material-icons">arrow_forward</i></a>
-                      <a sec:authorize="hasRole('ROLE_MUSICIAN')" class="goBtn right waves-effect waves-light white-text orange accent-4 btn-floating " th:href="'/musician/gig/' + @{${gig.id}}"><i class="material-icons">arrow_forward</i></a>
+                      <a class="goBtn right waves-effect waves-light white-text orange accent-4 btn-floating " th:href="'/gig/' + @{${gig.id}}"><i class="material-icons">arrow_forward</i></a>
 
                   </div>
                   <div class="gigInfo white center-align">
