--- a/src/main/resources/templates/Search/search.html
+++ b/src/main/resources/templates/Search/search.html
@@ -3,172 +3,169 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:include="fragments/includes :: indexHead"></head>
-<body th:inline="text" class="grey lighten-1">
-<div th:include="fragments/navbar :: navHome"></div>
+<body th:inline="text" >
+<main class="search">
+    <div th:include="fragments/navbar :: navHome"></div>
+        <div sec:authorize="hasRole('ROLE_MUSICIAN')">
+            <h1 class="center-align white-text">Search for Gigs</h1>
 
-<div sec:authorize="hasRole('ROLE_MUSICIAN')" class="container gigSearch">
-    <h1 class="center-align">Search for Gigs</h1>
+            <div class="card-panel">
+                <div class="section">
+                    <form th:action="@{/searchGigLocation}" method="post" class="white-text">
 
-    <form th:action="@{/searchGigLocation}" method="post" class="white">
+                        <div class="section row">
+                            <div class="input-field col s10">
+                                <i class="orange-text text-accent-4 material-icons prefix">location_on</i>
+                                <input type="text" placeholder="Search by Location" name="location" id="giglocation"/>
+                                <label for="giglocation">Location</label>
+                            </div>
+                            <div class="col s2">
+                                <button class="btn orange accent-4" type="submit">Search</button>
 
-        <div class="section row">
-            <div class="input-field col s10">
-                <i class="orange-text text-accent-4 material-icons prefix">location_on</i>
-                <input type="text" placeholder="Search by Location" name="location" id="giglocation"/>
-                <label for="giglocation">Location</label>
-            </div>
-            <div class="col s2">
-                <button class="btn orange accent-4" type="submit">Search</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="section">
+                    <form th:action="@{/searchGigType}" method="post" class="white-text">
+                        <div class="section row">
+                            <div class="input-field col s10">
+                                <i class="orange-text text-accent-4 material-icons prefix">event_note</i>
 
-            </div>
-        </div>
-    </form>
-    <form th:action="@{/searchGigType}" method="post" class="white">
-        <div class="section row">
-            <div class="input-field col s10">
-                <i class="orange-text text-accent-4 material-icons prefix">event_note</i>
+                                <select name="type" id="type">
+                                    <option value="" disabled="disabled" selected="selected">Search by Gig Type</option>
 
-                <select name="type" id="type">
-                    <option value="" disabled="disabled" selected="selected">Search by Gig Type</option>
+                                    <option th:each="gigType : ${gigTypes}" th:value="${gigType.type}">[[${gigType.type}]]</option>
+                                </select>
+                                <label for="type">Type of Gigs</label>
+                            </div>
+                            <div class="col s2">
+                                <button class="btn orange accent-4" type="submit">Search</button>
 
-                    <option th:each="gigType : ${gigTypes}" th:value="${gigType.type}">[[${gigType.type}]]</option>
-                </select>
-                <label for="type">Type of Gigs</label>
-            </div>
-            <div class="col s2">
-                <button class="btn orange accent-4" type="submit">Search</button>
-
-            </div>
-        </div>
-    </form>
-</div>
-
-<div sec:authorize="hasRole('ROLE_COMPANY')" class="container companySearch">
-    <h1 class="center-align">Search for Musicians</h1>
-
-    <form th:action="@{/searchName}" method="post" class="white">
-        <div class=" section row">
-            <div class="input-field col s5">
-                <i class="orange-text text-accent-4 material-icons prefix">account_circle</i>
-
-                <input placeholder="Search First Name" id="first_name" type="text" name="firstName" class="validate"/>
-                <label for="first_name">First Name</label>
-            </div>
-            <div class="input-field col s5">
-                <input placeholder="Search Last Name" id="last_name" type="text" name="lastName" class="validate"/>
-                <label for="last_name">Last Name</label>
-            </div>
-            <div class="col s2">
-                <button class="btn orange accent-4 " type="submit">Search</button>
-
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
 
         </div>
-    </form>
-    <form th:action="@{/searchUsername}" method="post" class="white">
-        <div class="section row">
-            <div class="input-field col s10 ">
-                <i class="orange-text text-accent-4 material-icons prefix">account_box</i>
 
-                <input type="text" placeholder="Search by Username" name="musicianUsername" id="username"/>
-                <label for="username">Username</label>
+
+    <div sec:authorize="hasRole('ROLE_COMPANY')" class="container">
+        <h1 class="center-align white-text">Search for Musicians</h1>
+        <div class="card-panel">
+            <div class="section">
+                <form th:action="@{/searchName}" method="post" class="white-text">
+                    <div class=" section row">
+                        <div class="input-field col s5">
+                            <i class="orange-text text-accent-4 material-icons prefix">account_circle</i>
+
+                            <input placeholder="Search First Name" id="first_name" type="text" name="firstName" class="validate"/>
+                            <label for="first_name">First Name</label>
+                        </div>
+                        <div class="input-field col s5">
+                            <input placeholder="Search Last Name" id="last_name" type="text" name="lastName" class="validate"/>
+                            <label for="last_name">Last Name</label>
+                        </div>
+                        <div class="col s2">
+                            <button class="btn orange accent-4 " type="submit">Search</button>
+
+                        </div>
+
+                    </div>
+                </form>
             </div>
-            <div class="col s2 ">
-                <button class="btn orange accent-4" type="submit">Search</button>
+            <div class="section">
+                <form th:action="@{/searchInstrument}" method="post" class="white-text">
+                    <div class="section row">
+                        <div class="input-field col s10">
+                            <i class="orange-text text-accent-4 material-icons prefix">star</i>
 
+                            <select multiple="multiple" name="instrument">
+                                <option value="" disabled="disabled" selected="selected">Search by Musical Instruments</option>
+                                <option th:inline="text" th:each="instrument : ${instruments}" th:value="${instrument.name}">[[${instrument.name}]]</option>
+                            </select>
+                        </div>
+                        <div class="col s2">
+                            <button class="btn orange accent-4" type="submit">Search</button>
+
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="section">
+                <form th:action="@{/searchLocation}" method="post" class="white-text">
+                    <div class="section row">
+                        <div class="input-field col s10">
+                            <i class="orange-text text-accent-4 material-icons prefix">location_on</i>
+
+                            <input type="text" placeholder="Search by Location" name="location" id="location"/>
+                            <label for="location">Location</label>
+                        </div>
+                        <div class="col s2">
+                            <button class="btn orange accent-4" type="submit">Search</button>
+
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
-    </form>
-    <form th:action="@{/searchInstrument}" method="post" class="white">
-        <div class="section row">
-            <div class="input-field col s10">
-                <i class="orange-text text-accent-4 material-icons prefix">star</i>
 
-                <select multiple="multiple" name="instrument">
-                    <option value="" disabled="disabled" selected="selected">Search by Musical Instruments</option>
-                    <option th:inline="text" th:each="instrument : ${instruments}" th:value="${instrument.name}">[[${instrument.name}]]</option>
-                </select>
-            </div>
-            <div class="col s2">
-                <button class="btn orange accent-4" type="submit">Search</button>
-
-            </div>
-        </div>
-    </form>
-    <form th:action="@{/searchLocation}" method="post" class="white">
-        <div class="section row">
-            <div class="input-field col s10">
-                <i class="orange-text text-accent-4 material-icons prefix">location_on</i>
-
-                <input type="text" placeholder="Search by Location" name="location" id="location"/>
-                <label for="location">Location</label>
-            </div>
-            <div class="col s2">
-                <button class="btn orange accent-4" type="submit">Search</button>
-
-            </div>
-        </div>
-    </form>
-</div>
-<div class="divider"></div>
-<section class="searchResult container">
-    <h1>Search Results</h1>
-    <div sec:authorize="hasRole('ROLE_COMPANY')">
-        <div class="row">
-            <div  th:each="musician : ${musician}">
-                <div class="col s12 m6">
-                    <div class="musicianCards ">
-                        <a th:href="'/company/find-bands/' + @{${musician.id}}" >
-
-                            <div class="  white hoverable z-depth-2">
-
-                                <div class="valign-wrapper">
-                                    <div class="left ">
-                                        <img th:src="@{${musician.profPicImage}} " class="cardImage circle"/>
-                                    </div>
-
-                                    <div class="musicianInfo black-text">
-                                        <p ><b>[[${musician.firstName}]] [[${musician.lastName}]]</b></p>
-                                        <p>[[${musician.musicianInstruments}]]</p>
+    </div>
+    <div class="divider"></div>
+    <section class="searchResult container">
+        <h1 class="center-align white-text">Search Results</h1>
+        <div sec:authorize="hasRole('ROLE_COMPANY')">
+            <div class="row">
+                <div  th:each="musician : ${musician}">
+                    <div class="col s12 m4 l3  center-align ">
+                        <a sec:authorize="hasRole('ROLE_COMPANY')" th:href="'/company/find-bands/' + @{${musician.id}}" >
+                            <div  th:style="'background:url('+ @{${musician.profPicImage}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 41vh; width: 100%'" class="bandInfo hoverable">
+                                <div class="second">
+                                    <div class="hiddenText">
+                                        <h5 ><b>[[${musician.firstName}]] [[${musician.lastName}]]</b></h5>
+                                        <p class="flow-text">[[${musician.musicianInstruments}]]</p>
                                     </div>
                                 </div>
+
 
                             </div>
                         </a>
                     </div>
-
                 </div>
             </div>
         </div>
-    </div>
 
 
-    <div sec:authorize="hasRole('ROLE_MUSICIAN')">
-        <div class="row">
-            <div th:each="gig : ${gig}" class="col s6">
-                <div class="col s12 m6">
+        <div sec:authorize="hasRole('ROLE_MUSICIAN')">
+            <div class="row">
+                <div th:each="gig : ${gig}" class="col s6">
+                    <div class="col s12 m6">
 
-                    <div class="gigCard z-depth-2">
-                        <div class="gigImage" th:style="'background:url('+ @{${gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center;'">
-                            <div class="dateBox white orange-text text-accent-4 center-align">
-                                <h4>[[${#dates.format(gig.gigStart,'d')}]]</h4>
-                                <p>[[${#dates.format(gig.gigStart,'MMMM')}]]</p>
+                        <div class="gigCard z-depth-2">
+                            <div class="gigImage" th:style="'background:url('+ @{${gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center;'">
+                                <div class="dateBox white orange-text text-accent-4 center-align">
+                                    <h4>[[${#dates.format(gig.gigStart,'d')}]]</h4>
+                                    <p>[[${#dates.format(gig.gigStart,'MMMM')}]]</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="gigInfo white center-align">
-                            <p><b>[[${gig.gigTitle}]]</b></p>
-                            <p >[[${gig.gigLocation}]]</p>
-                            <div class="divider"></div>
-                            <a class=" waves-effect waves-light orange-text text-accent-4 hoverable gigApplied " th:href="'/musician/gig/' + @{${gig.id}}">Details</a>
+                            <div class="gigInfo white center-align">
+                                <p><b>[[${gig.gigTitle}]]</b></p>
+                                <p >[[${gig.gigLocation}]]</p>
+                                <div class="divider"></div>
+                                <a class=" waves-effect waves-light orange-text text-accent-4 hoverable gigApplied " th:href="'/musician/gig/' + @{${gig.id}}">Details</a>
 
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-    </div>
-</section>
+        </div>
+    </section>
+
+</main>
+
 
 
 <div th:include="fragments/footer :: footer"></div>
